# shared/DTOs/UpdatePricingPlanStatusRequest.cs
@@ -1,0 +1,11 @@
+using System.ComponentModel.DataAnnotations;
+using Shared.Models;
+
+namespace Shared.DTOs
+{
+    public class UpdatePricingPlanStatusRequest
+    {
+        [Required]
+        public PricingPlanStatus Status { get; set; }
+    }
+}
